fix table to add tbody, add some spacing, add refresh button

--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,7 @@ th {
 .departures {
   margin: 20px 100px;
 }
+
+.button-switch-station {
+  margin-right: 10px;
+}
